--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,7 @@
   "version": "0.0.1",
   "homepage": "https://github.com//n4Notifications",
   "authors": [
-    "N4Works <email>"
+    "N4Works <contato@n4works.com>"
   ],
   "description": "desc",
   "keywords": [],
