--- a/bower.json
+++ b/bower.json
@@ -26,10 +26,11 @@
     "*.conf.js"
   ],
   "dependencies": {
-    "angular": ">=1.0.8"
+    "angular": ">=1.3.17",
+    "angular-animate": ">=1.3.17"
   },
   "devDependencies": {
-    "angular-mocks": ">=1.0.8",
+    "angular-mocks": ">=1.3.17",
     "jquery": "~2.1.4"
   }
 }
