--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,7 @@
   ],
   "dependencies": {
     "angular": ">=1.3.17",
-    "angular-animate": ">=1.3.17"
+    "angular-animate": "~1.4.3"
   },
   "devDependencies": {
     "angular-mocks": ">=1.3.17",
