--- a/bower.json
+++ b/bower.json
@@ -26,8 +26,7 @@
     "*.conf.js"
   ],
   "dependencies": {
-    "angular": ">=1.3.17",
-    "angular-animate": "~1.4.3"
+    "angular": ">=1.3.17"
   },
   "devDependencies": {
     "angular-mocks": ">=1.3.17",
