--- a/bower.json
+++ b/bower.json
@@ -26,7 +26,8 @@
     "*.conf.js"
   ],
   "dependencies": {
-    "angular": ">=1.3.17"
+    "angular": ">=1.3.17",
+    "n4Notifications": "n4-notifications-directive#~1.0.2"
   },
   "devDependencies": {
     "angular-mocks": ">=1.3.17",
