--- a/bower.json
+++ b/bower.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "angular-mocks": ">=1.3.17",
-    "jquery": "~2.1.4"
+    "jquery": "~2.1.4",
+    "angular-animate": "~1.4.3"
   }
 }
