--- a/bower.json
+++ b/bower.json
@@ -33,5 +33,8 @@
   "devDependencies": {
     "angular-mocks": ">=1.3.17",
     "jquery": "~2.1.4"
+  },
+  "resolutions": {
+    "angular": ">=1.3.17"
   }
 }
